modified scriptnames, css add images

--- a/people.html
+++ b/people.html
@@ -7,7 +7,7 @@
   <title>Blue ant OÜ</title>
   <meta name="description" content="Blue ant OÜ">
   <meta name="author" content="Blue ant OÜ">
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <link rel="stylesheet" href="css/style.css">
 
@@ -30,7 +30,7 @@
         <nav>
           <ul>
             <li><a href="index.html">Esileht</a></li>
-            <li><a href="communication.html">Kommunikatsioon</a></li>
+            <li><a href="communication.html">Suhtlus</a></li>
             <li><a href="texts.html">Tekstid</a></li>
             <li><a href="vikis.html">Vikid</a></li>
             <li><a href="justice.html">Õigus</a></li>
@@ -45,8 +45,8 @@
         <div class="centerbox clickable" id="raulveede">
                 <span class="round bottom"><h4>Raul Veede</h4></span>   
         </div>
-          <div class="sub">
-            <div class="container rightalign">
+          <div class="sub raulveede">
+            <div class="container rightalign raulveede">
                         <div class="box">
                         <p>Seda tehakse hästi selgelt ja lihtlabaselt nt ikoonid jms, sest kasutaja märkab neid ilma süvenemata. Täpsemalt saab ta uurida asja "teenuste" lehe alt, kus võib ka kõik lahti seletada</p>
 </div>
@@ -55,26 +55,27 @@
             </div>
           </section>
            <section class="blue accordion" >
-              <div class="centerbox clickable" id="evaleppik">
+              <div class="centerbox clickable" id="evalepik">
                 <span class="round bottom"><h4>Eva lepik</h4></span>
               </div>        
           <div class="sub">
-            <div class="container rightalign">
+            <div class="container rightalign evalepik">
                                 <div class="box">
                         <p>Seda tehakse hästi selgelt ja lihtlabaselt nt ikoonid jms, sest kasutaja märkab neid ilma süvenemata. Täpsemalt saab ta uurida asja "teenuste" lehe alt, kus võib ka kõik lahti seletada</p>
 </div>
               </div>
             </div>
           </section>
-                  <section class="blue accordion" >
-        <div class="centerbox clickable" id="loremipsum">
-                <span class="round bottom"><h4>Lorem ipsaum</h4></span>   
+        <section class="blue accordion">
+        <div class="centerbox clickable" id="raulveede">
+                <span class="round bottom"><h4>Raul Veede</h4></span>   
         </div>
-          <div class="sub">
-            <div class="container rightalign">
-                                     <div class="box">
+          <div class="sub raulveede">
+            <div class="container rightalign raulveede">
+                        <div class="box">
                         <p>Seda tehakse hästi selgelt ja lihtlabaselt nt ikoonid jms, sest kasutaja märkab neid ilma süvenemata. Täpsemalt saab ta uurida asja "teenuste" lehe alt, kus võib ka kõik lahti seletada</p>
 </div>
+              
               </div>
             </div>
           </section>
@@ -101,5 +102,6 @@
           </footer>
         </body>
       </body>
-      <script src="script.js"></script>
+             <script src="navbar_script.js"></script>
+        <script src="panels_script.js"></script>   
       </html>
