--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
   <title>Blue ant OÜ</title>
   <meta name="description" content="Blue ant OÜ">
   <meta name="author" content="Blue ant OÜ">
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <link rel="stylesheet" href="css/style.css">
 
@@ -82,4 +82,5 @@
             </div>
           </footer>
 </body>
-</html>
+        <script src="navbar_script.js"></script>
+        </html>
