--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Blue ant OÜ</title>
   <meta name="description" content="Blue ant OÜ">
   <meta name="author" content="Blue ant OÜ">
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <link rel="stylesheet" href="css/style.css">
 
@@ -30,7 +30,7 @@
         <nav>
           <ul>
             <li class="active"><a href="index.html">Esileht</a></li>
-            <li><a href="communication.html">Kommunikatsioon</a></li>
+            <li><a href="communication.html">Suhtlus</a></li>
             <li> <a href="texts.html">Tekstid</a></li>
             <li><a href="vikis.html">Vikid</a></li>
             <li><a href="justice.html">Õigus</a></li>
@@ -88,5 +88,5 @@
             </div>
           </footer>
         </body>
-        <script src="script2.js"></script>
+        <script src="navbar_script.js"></script>
         </html>
