add some modifications

--- a/contact.html
+++ b/contact.html
@@ -22,23 +22,25 @@
       <div class="container">
         <div class="logo"><h1>Blue ant OÜ</h1></div>
         <button type="button" id="navbar-toggle">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
         </button>
         <nav>
-          <li><a href="index.html">Esileht</a></li>
-          <li><a href="communication.html">Suhtlus</a></li>
-          <li><a href="texts.html">Tekstid</a></li>
-          <li><a href="vikis.html">Vikid</a></li>
-          <li><a href="justice.html">Õigus</a></li>
-          <li><a href="people.html">Inimesed</a></li>
-          <li class="active"><a href="contact.html">Kontaktid</a></li>
+          <ul>
+            <li><a href="index.html">Esileht</a></li>
+            <li><a href="communication.html">Suhtlus</a></li>
+            <li><a href="texts.html">Tekstid</a></li>
+            <li><a href="vikis.html">Vikid</a></li>
+            <li><a href="justice.html">Õigus</a></li>
+            <li><a href="people.html">Inimesed</a></li>
+            <li class="active"><a href="contact.html">Kontaktid</a></li>          
+          </ul>
+
         </nav>
       </div>
-    </section>
-    <section class="white">
+    </section>    <section class="white">
       <div class="container">
               <div class="smallbox">
                 <span class="round"></span>
