--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
             <div class="box communication">
               <a href="communication.html">
                 <span class="round"><span>suhtlus</span></span>
-                <p>Seda tehakse hästi selgelt ja lihtlabaselt nt ikoonid jms, sest kasutaja märkab neid ilma süvenemata. Täpsemalt saab ta uurida asja "teenuste" lehe alt, kus võib ka kõik lahti seletada</p></a>
+                <p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas</p></a>
               </div>
               <div class="box texts middle">
                 <a href="texts.html">
                   <span class="round middle"><span>Tekstid</span> </span>
-                  <p>Esileht peaks sisaldama mingit kujulgi pildilist materjali kasutaja köitmiseks. Seda peab veidi mõtlema, et mis sinu imagoloogiaga sobiks</p> </a>
+                  <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt</p> </a>
                 </div>
               </div>     
             </div>        
@@ -67,12 +67,12 @@
                   <div class="box vikis">
                     <a href="vikis.html">
                       <span class="round bottom"><span>Vikid</span> </span>
-                      <p>Väga hea on kui saad disainimise lihtsustamiseks kirja panna märksõnu vms et kuidas sinu firma maine võiks välja paista - nt  boheemlaslik/tõsine, peen/lihtsasti kasutatav etc</p></a>
+                      <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p></a>
                     </div>
                     <div class="box justice middle">
                       <a href="justice.html">
                         <span class="round bottom middle"><span>Õigus</span></span>
-                        <p>Mida ma ei soovita on esilehel tüüpiline "meist" tekst, sest  see on äärmiselt vähepaeluv, ajad on teised ja vähesed üldse loevad neid</p></a>
+                        <p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas</p></a>
                       </div>
                     </div>
                   </div>
